--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# api keys
+*.env
+
 # Logs
 logs
 *.log
@@ -6,6 +10,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+
 
 node_modules
 dist
@@ -22,5 +28,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-# api keys
-.env
+
