--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -20,7 +20,7 @@
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch:
+  #workflow_dispatch:
 
 env:
   AZURE_WEBAPP_PACKAGE_PATH: 'src'      # set this to the path to your web app project, defaults to the repository root
