--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -45,12 +45,13 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+    - name: Zip artifact for deployment
+      run: zip release.zip ./* -r    
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
         name: node-app
-        path: .
-
+        path: release.zip
   deploy:
     permissions:
       contents: none
@@ -65,7 +66,8 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: node-app
-
+    - name: unzip artifact for deployment
+      run: unzip release.zip
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
