--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.0.5",
     "@react-google-maps/api": "^2.19.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
