--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.2.12",
-    "react-router-dom": "^6.14.2"
-    "react-open-weather": "^1.3.2",
+    "react-router-dom": "^6.14.2",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4"
