--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-google-maps/api": "^2.19.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
     "places-autocomplete": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.2.12",
-    "react-router-dom": "^6.14.2",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4"
